--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <h2>CSS Dinner Shopping List</h2>
             <p>Let’s go to the mall!</p>
@@ -18,7 +18,7 @@
     </header>
     <main>
         <div class="container">
-            <ul>
+            <ul class="shoping-list">
                 <li class="first-li">
                     <label class="label">
                         <input type="checkbox" class="checkbox">
